force-app/main/default/objects/sked_Slot_Configuration_Default__mdt/sked_Slot_Configuration_Default__mdt.object-meta.xml
<CustomObject>
    <description>Created as part of HRP-17440. Org-wide default appointment slot configuration per Drive Type / Fixed Site Operation Type / Procedure Type, used when a Collection Operation has no Collection Operation Slot Config row covering the drive date.</description>
    <label>Slot Configuration Default</label>
    <pluralLabel>Slot Configuration Defaults</pluralLabel>
</CustomObject>