force-app/main/default/objects/sked_Slot_Configuration_Default__mdt/fields/sked_Configuration_Json__c.field-meta.xml
<CustomField>
    <fullName>sked_Configuration_Json__c</fullName>
    <description>Org-wide default slot configuration JSON. Whole Blood: { "slotDuration", "roundOrderMode" }. Power Red: { "roundInterval", "numberOfGroups", "groupInterval", "slotDuration" }.</description>
    <label>Configuration Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>