force-app/main/default/objects/sked_Slot_Configuration_Default__mdt/fields/sked_Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Type__c</fullName>
    <label>Drive Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>