force-app/main/default/objects/sked_Slot_Configuration_Default__mdt/fields/sked_Fixed_Site_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Fixed_Site_Operation_Type__c</fullName>
    <description>Blank for Mobile defaults.</description>
    <label>Fixed Site Operation Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>